# WebAppCommercial

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
backend/csharp-webapi/csharp_webapi_api/: csharp_webapi_api.http
backend/csharp-webapi/csharp_webapi_api/Properties/: launchSettings.json
backend/cxx-lowlevel-api/: CMakeLists.txt  magic.h  main.cpp
backend/java-spring/japp/: build.gradle  compose.yaml
backend/java-spring/japp/src/main/java/com/jbackend/japp/: JappApplication.java
backend/java-spring/japp/src/test/java/com/jbackend/japp/: JappApplicationTests.java
backend/python-workers/: Dockerfile  main.py
backend/rust-api/rust_api/: Cargo.toml  Dockerfile
backend/rust-api/rust_api/src/: main.rs
dashboard/dash_frontend/: Dockerfile  RUNNING.txt
frontend/react_frontend_app/: Dockerfile  index.html  package-lock.json  package.json
frontend/react_frontend_app/src/: App.tsx
