[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
maturin = "1.13.3"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
serde_json = "1.0.149"
sqlx = "0.8.6"
tokio-tungstenite = "0.29.0"
tower = "0.5.3"
